--- a/index.html
+++ b/index.html
@@ -2939,7 +2939,7 @@ async function addDeliveryMarkers() {
             const sequenceSpan = document.createElement('span');
             sequenceSpan.style.color = '#EA4335';
             sequenceSpan.style.fontWeight = 'bold';
-            sequenceSpan.textContent = `#${delivery.sequence}`;
+            sequenceSpan.textContent = `Ordem: ${delivery.sequence}`;
 
             const qrSpan = document.createElement('span');
             qrSpan.style.fontSize = '10px';
