--- a/index.html
+++ b/index.html
@@ -1540,7 +1540,7 @@
     <button id="btnClearRoute" class="control-btn" title="Limpar rotas e marcadores" style="display: none;">🗑️</button>
     <button id="btnOpenSidebar" class="control-btn" title="Ver lista de clientes">👥</button>
     <button id="btnUploadSpreadsheet" class="control-btn" title="Atualizar planilha do dia">📊</button>
-    <button id="btnToggleClients" class="control-btn" title="Mostrar/Ocultar clientes no mapa">📍</button>
+    <button id="btnToggleClients" class="control-btn" title="Mostrar/Ocultar clientes no mapa">👤</button>
 </div>
 
 <!-- Container de Notificações -->
