--- a/index.html
+++ b/index.html
@@ -6180,35 +6180,69 @@ async function processSpreadsheetData(jsonData) {
             console.warn('Erro ao buscar clientes:', clientsError);
         }
 
+        // Função para normalizar endereços antes da comparação
+        function normalizeAddress(address) {
+            if (!address) return '';
+            return address
+                .toLowerCase()
+                .trim()
+                .replace(/\s+/g, ' ')  // Substituir múltiplos espaços por um único
+                .replace(/\n/g, ' ')    // Remover quebras de linha
+                .replace(/\r/g, '')     // Remover retorno de carro
+                .normalize('NFD')       // Normalizar caracteres Unicode
+                .replace(/[\u0300-\u036f]/g, ''); // Remover acentos
+        }
+
         // 6. Comparar APENAS endereços: Destination Address (planilha) vs address (clientes)
         let matchedCount = 0;
         let notRegisteredCount = 0;
+        const matchedAddresses = [];
+        const notMatchedAddresses = [];
 
         if (clients && clients.length > 0) {
+            console.log(`🔍 Iniciando comparação de ${deliveryDataRecords.length} endereços da planilha com ${clients.length} clientes cadastrados...`);
+
             for (const delivery of deliveryDataRecords) {
-                const deliveryAddress = (delivery.destination_address || '').toLowerCase().trim();
+                const deliveryAddressOriginal = delivery.destination_address || '';
+                const deliveryAddressNormalized = normalizeAddress(deliveryAddressOriginal);
                 let isMatched = false;
+                let matchedClientName = '';
 
                 // Verificar se o endereço da planilha bate com algum cliente cadastrado
                 for (const client of clients) {
-                    const clientAddress = (client.address || '').toLowerCase().trim();
+                    const clientAddressOriginal = client.address || '';
+                    const clientAddressNormalized = normalizeAddress(clientAddressOriginal);
 
-                    // Comparação APENAS por endereço (texto)
-                    if (clientAddress && deliveryAddress && clientAddress === deliveryAddress) {
+                    // Comparação APENAS por endereço (texto normalizado)
+                    if (clientAddressNormalized && deliveryAddressNormalized &&
+                        clientAddressNormalized === deliveryAddressNormalized) {
                         isMatched = true;
+                        matchedClientName = client.name;
                         break;
                     }
                 }
 
                 if (isMatched) {
                     matchedCount++;
+                    matchedAddresses.push({
+                        address: deliveryAddressOriginal,
+                        client: matchedClientName,
+                        spx_tn: delivery.spx_tn
+                    });
+                    console.log(`✅ MATCH: "${deliveryAddressOriginal}" → Cliente: ${matchedClientName}`);
                 } else {
                     notRegisteredCount++;
+                    notMatchedAddresses.push({
+                        address: deliveryAddressOriginal,
+                        spx_tn: delivery.spx_tn
+                    });
+                    console.log(`⚠️ NO MATCH: "${deliveryAddressOriginal}"`);
                 }
             }
         } else {
             // Se não há clientes cadastrados, todos os endereços não estão registrados
             notRegisteredCount = deliveryDataRecords.length;
+            console.log(`⚠️ Nenhum cliente cadastrado para comparação`);
         }
 
         console.log(`📊 Análise de endereços:`);
